# Panier

./: .gitignore  README.md  pyproject.toml
examples/: chili.yaml  comparison-emmental-rape-leclerc-auchan.yaml  emmental-rape.yaml  gratin-emmental.yaml  pantry.yaml  prices-emmental-rape-leclerc-auchan.yaml  prices.yaml  recipes-emmental-rape.yaml  recipes.yaml  shopping-list.yaml
src/panier/: __init__.py  __main__.py  brands.py  cart.py  catalog.py  cli.py  constraints.py  deterministic.py  drive.py  managed_browser.py  models.py  nutrition.py  planner.py  price_cache.py  substitutions.py
tests/: test_catalog.py  test_deterministic_cli.py  test_deterministic_regression.py  test_planner.py
